plugins {
    id 'java'
    id "org.sonarqube" version "3.4.0.2513"
    id 'jacoco'
}


version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.assertj:assertj-core:3.22.0'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(11)
    }
}

test {
    useJUnitPlatform()
}

jacocoTestReport {
    dependsOn tasks.test
    reports {
        xml.enabled(true)
        html.enabled(true)
        xml.destination(new File("build/reports/jacoco.xml"))
    }
}


sonarqube {
    properties {
        property "sonar.host.url", "http://localhost:9000"
        property "sonar.projectKey", "java-ladder"
        property "sonar.login", "sqp_da581b18a201cef72bbc09198865afc336ad737a"
        property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco.xml"
        property "sonar.java.source", "11"
        property "sonar.java.target", "11"
    }
}


tasks["sonarqube"].dependsOn(jacocoTestReport)
